[gd_scene load_steps=12 format=2]

[ext_resource path="res://Asset/Font/jumper_3/JumperPERSONALUSEONLY-RegularItalic.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scene & Script/Galeri/Galeri.gd" type="Script" id=2]
[ext_resource path="res://Asset/Font/jumper_3/JumperPERSONALUSEONLY-BoldItalic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Asset/Sound and Music/Sound/220206__gameaudio__beep-space-button.wav" type="AudioStream" id=4]
[ext_resource path="res://Asset/Sound and Music/Sound/220203__gameaudio__casual-death-loose.wav" type="AudioStream" id=5]
[ext_resource path="res://Scene & Script/Galeri/PanelCredit/PanelCredit.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scene & Script/Galeri/PanelKarakter/PanelKarakter.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scene & Script/Galeri/PanelKarakter/PanelKarakter_Info.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 11
font_data = ExtResource( 3 )

[node name="Galeri" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel1" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.254902, 0.219608, 0.635294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="ColorRect" parent="."]
anchor_right = 0.4
anchor_bottom = 1.0
color = Color( 0.380392, 0.372549, 0.443137, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 0.4
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer"]
margin_right = 256.0
margin_bottom = 384.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer2"]
margin_left = 61.0
margin_top = 115.0
margin_right = 194.0
margin_bottom = 269.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/CenterContainer2/VBoxContainer"]
margin_right = 133.0
margin_bottom = 75.0
rect_min_size = Vector2( 0, 75 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer2/VBoxContainer/CenterContainer"]
margin_top = 25.0
margin_right = 133.0
margin_bottom = 50.0

[node name="Selector" type="Label" parent="MarginContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_right = 10.0
margin_bottom = 25.0
rect_min_size = Vector2( 10, 0 )
custom_fonts/font = SubResource( 1 )
text = ">"

[node name="Selection" type="Label" parent="MarginContainer/CenterContainer2/VBoxContainer/CenterContainer/HBoxContainer"]
margin_left = 14.0
margin_right = 133.0
margin_bottom = 25.0
rect_min_size = Vector2( 119, 0 )
custom_fonts/font = SubResource( 2 )
text = "Credit"

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/CenterContainer2/VBoxContainer"]
margin_top = 79.0
margin_right = 133.0
margin_bottom = 154.0
rect_min_size = Vector2( 0, 75 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer2/VBoxContainer/CenterContainer2"]
margin_top = 25.0
margin_right = 133.0
margin_bottom = 50.0

[node name="Selector" type="Label" parent="MarginContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_right = 10.0
margin_bottom = 25.0
rect_min_size = Vector2( 10, 0 )
custom_fonts/font = SubResource( 1 )
text = ">"

[node name="Selection" type="Label" parent="MarginContainer/CenterContainer2/VBoxContainer/CenterContainer2/HBoxContainer"]
margin_left = 14.0
margin_right = 133.0
margin_bottom = 25.0
rect_min_size = Vector2( 119, 0 )
custom_fonts/font = SubResource( 2 )
text = "Karakter"

[node name="Accept_button" type="ColorRect" parent="."]
anchor_left = 0.037
anchor_top = 0.937
anchor_right = 0.062
anchor_bottom = 0.979
margin_left = 0.32
margin_top = 0.191986
margin_right = 0.32
margin_bottom = 0.0639954
rect_pivot_offset = Vector2( 0, 3.05176e-05 )
color = Color( 0, 1, 0.156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Accept_button2" type="ColorRect" parent="."]
anchor_left = 0.175
anchor_top = 0.937
anchor_right = 0.2
anchor_bottom = 0.979
margin_left = -7.62939e-06
margin_top = 0.191986
margin_bottom = 0.0639954
color = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Accept_lbl" type="Label" parent="."]
anchor_left = 0.062
anchor_top = 0.937
anchor_right = 0.137
anchor_bottom = 0.979
margin_left = 0.32
margin_top = 0.191986
margin_right = 0.319992
margin_bottom = 1.064
custom_fonts/font = SubResource( 3 )
text = "Buka"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Decline_lbl" type="Label" parent="."]
anchor_left = 0.2
anchor_top = 0.937
anchor_right = 0.287
anchor_bottom = 0.982
margin_top = 0.191986
margin_right = 0.320007
margin_bottom = -0.0880127
custom_fonts/font = SubResource( 3 )
text = "Kembali"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectOption" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="SelectedOption" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="PanelCredit" parent="." instance=ExtResource( 6 )]
visible = false
color = Color( 0.380392, 0.372549, 0.443137, 1 )

[node name="PanelKarakter" parent="." instance=ExtResource( 7 )]
visible = false

[node name="PanelKarakter_Info" parent="." instance=ExtResource( 8 )]
visible = false
